# contracts/openapi.json
@@ -2277,6 +2277,17 @@
             ],
             "title": "Last Error"
           },
+          "last_restart_reason": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Last Restart Reason"
+          },
           "loaded_model": {
             "anyOf": [
               {
